# spotlesspdf

./: Info.plist  README.md  spotlesspdf_engine
SpotlessPDF/: ContentView.swift  DownloadLocationStore.swift  Localization.swift  PDFCleaningService.swift  SpotlessPDFApp.swift
SpotlessPDF/ar.lproj/: Localizable.strings
SpotlessPDF/br.lproj/: Localizable.strings
SpotlessPDF/cs.lproj/: Localizable.strings
SpotlessPDF/cy.lproj/: Localizable.strings
SpotlessPDF/da.lproj/: Localizable.strings
SpotlessPDF/de.lproj/: Localizable.strings
SpotlessPDF/el.lproj/: Localizable.strings
SpotlessPDF/en.lproj/: Localizable.strings
SpotlessPDF/es.lproj/: Localizable.strings
SpotlessPDF/et.lproj/: Localizable.strings
SpotlessPDF/fa.lproj/: Localizable.strings
SpotlessPDF/fi.lproj/: Localizable.strings
SpotlessPDF/fr.lproj/: Localizable.strings
SpotlessPDF/ga.lproj/: Localizable.strings
SpotlessPDF/gd.lproj/: Localizable.strings
SpotlessPDF/gl.lproj/: Localizable.strings
SpotlessPDF/he.lproj/: Localizable.strings
SpotlessPDF/hi.lproj/: Localizable.strings
SpotlessPDF/hr.lproj/: Localizable.strings
SpotlessPDF/it.lproj/: Localizable.strings
SpotlessPDF/ja.lproj/: Localizable.strings
SpotlessPDF/ko.lproj/: Localizable.strings
SpotlessPDF/kw.lproj/: Localizable.strings
SpotlessPDF/lt.lproj/: Localizable.strings
SpotlessPDF/lv.lproj/: Localizable.strings
SpotlessPDF/nb.lproj/: Localizable.strings
SpotlessPDFRust/: Cargo.toml
SpotlessPDFRust/src/: lib.rs  main.rs
SpotlessPDFRust/src/models/: page_type.rs
(+9 files in other folders)
